@@ -225,4 +225,14 @@
        <Method name="run" />
        <Bug pattern="REC_CATCH_EXCEPTION" />
      </Match>
+
+     <!--
+      Findbugs doesn't realize that closing a FilterOutputStream pushes the close down to
+      wrapped streams, too.
+     -->
+     <Match>
+       <Class name="org.apache.hadoop.hdfs.server.namenode.FSImageFormat$Saver" />
+       <Method name="save" />
+       <Bug pattern="OS_OPEN_STREAM" />
+     </Match>
  </FindBugsFilter>
